@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Prevent warnings when a promise was rejected with no reason
 
 v0.1.0    2018-10-04 19:39:24 EDT
   - First release
